--- a/de/coins.html
+++ b/de/coins.html
@@ -243,9 +243,9 @@
                                             </div>
                                                         </div>
                                         <div id="metamask-not-found" style="padding: 15px; display: none">
-                                                        <h2 class="float-left">MetaMask Not Found</h2></br>
-
-                                                <h3>To interact with the network, you must have <a href="https://metamask.io/">Metamask</a> installed and setup.</h3>
+                                            <h2 class="float-left">MetaMask wurde nicht gefunden</h2>
+                                            </br>
+                                            <h3>Um mit dem Netzwerk zu interagieren musst du <a href="https://metamask.io/">Metamask</a> installiert und eingerichtet haben.</h3>
                                         </div>
                                     </div>
                                     <div class="chat-box">
@@ -258,26 +258,22 @@
 							<div class="container" style="padding-bottom:30px;">
 							
 							<div class="text-center" style="padding-top:30px;">
-								<h2 style="color:#d69361">EthPyramid - Historical Chart (Sell Price)</h2>
+								<h2 style="color:#d69361">EthPyramid - Historie (Verkaufspreis)</h2>
 							</div>
 							<iframe src="https://powhchart.com/graph_hotlink.html?assetId=ethpyramid" style="width:100%; height:575px; overflow:hidden;" scrolling="no"></iframe>
-							<span style="font-weight:100;">Created by:</span>&nbsp;&nbsp;<a href="https://www.reddit.com/user/JuiceInNuggets/" style="color:green;" target="_blank">/u/JuiceInNuggets</a> - Donate ETH: 0xEfFcc2Db685C04276153Bb91Ca3FC4297a44f04D 
+							<span style="font-weight:100;">Entwickler:</span>&nbsp;&nbsp;<a href="https://www.reddit.com/user/JuiceInNuggets/" style="color:green;" target="_blank">/u/JuiceInNuggets</a> - Spenden ETH: 0xEfFcc2Db685C04276153Bb91Ca3FC4297a44f04D
 							</div>
 							</div>
 							<div class="container" style="margin-top:50px; border-bottom: 1px solid white; padding-bottom: 20px; margin-bottom: 40px;">
-	<h5 style="color:white;">Instructions for those who want to help build the great pyramid of Ether:</h5>
-	<p></p><li>First of all, install MetaMask <a href="https://metamask.io/">here</a> and put some Ether in it.</li><p></p>
-	<p></p><li>To buy EPY, simply click the "Buy Tokens" button and enter the amount of Ether you want to convert to EPY, based on the current Buy Price. Press the "Yep" button twice (do not ignore the warning).
-	When confirming the transaction on MetaMask, be sure to use a high enough gas price so that the price doesn't change drastically while the transaction is in progress.
-	<a href="https://ethgasstation.info/">Here</a> you can view recommended gas prices.
-	Buying coins will increase both the Buy Price and Sell Price with 0.25% per bought coin once the transaction is complete.</li><p></p>
-	<p></p><li>Under "EthPyramid Token Balance" you can see how many EPY you currently own.
-	Note that when cashing out coins, the Buy Price and Sell Price drop afterwards, decreasing the value of your (and everyone else's) coins by 0.25% per coin.</li><p></p>
-	<p></p><li>Every time EPY are bought or sold, a percentage of the fee from the bought/sold coins will be divided under the current EPY holders (Dividends).</li><p></p>
-	<p></p><li>You can move your tokens into Dividends which then is stored as Ethereum. To do this click on the "Sell Tokens" Button and your tokens will be transfered into your dividends balance.</li><p></p>
-	<p></p><li>You can also reinvest your Dividends directly into your EPY balance by selecting "Reinvest".</li><p></p>
-	<p></p><li>To cash out your coins, click the "Withdraw" button and follow the prompts.</li><p></p>
-	<p></p><li><b>PLEASE SAVE THIS SOMEWHERE SAFE:</b> If for any reason this website goes down, you can open up a Transaction through Metamask, Send 0 Ether with a 150k Gas Limit to the Contract at "0x2fa0ac498d01632f959d3c18e38f4390b005e200" and send "0xb1e35242" under additional data for a personal exit scheme. This is the getMeOutOfHere() function on the contract and will cash you out of all tokens and dividends. </li><p></p>
+	<h5 style="color:white;">Anleitung für diejenigen die bei dem Bau der großen Pyramide helfen wollen:</h5>
+    <p></p><li>Als erstes, installiere MetaMask&nbsp;<a href="https://metamask.io/">hier</a>&nbsp;und transferiere ein wenig Ethereum in die Geldbörse</li><p></p>
+    <p></p><li>Um EPY zu kaufen klickst du auf einkaufen und gibst ein wieviel Ethereum du in EPY umwandeln möchtest. Klicke zweimal auf den "YEP" Knopf (auf keinen Fall die Warnung ignorieren). Danach musst du auf MetaMask die Transaktion bestätigen und einen genügenden GAS Wert eingeben damit sich während der Transaktion der Preis nicht verändert.<a href="https://ethgasstation.info/">Hier&nbsp;</a>Kannst du dir empfohlene GAS-Preise angucken.</li><p></p>
+    <p></p><li>Unter "Meine Münzen" kannst sehen wieviele Münzen dir aktuell gehören. Denke daran dass wenn du dir deine EPY-Münzen auszahlst, sich der Einkaufs- und Verkaufs-Preis einer EPY-Münze für dich alle anderen um 0,25% verringert.</li><p></p>
+    <p></p><li>Jedes mal wenn EPY-Münzen gekauft oder verkauft werden werden Anteile prozentual and dich und alle anderen Münzenhalter verteilt (Dividenden)</li><p></p>
+    <p></p><li>Du kannst deine Münzen jederzeit zu deinen Dividenden transferieren die dann als Ethereum gelagert werden. Du musst dazu einfach auf "Münzen verkaufen" klicken und deine Münzen werden dann in deine Dividenden-Börse gelagert.&nbsp;</li><p></p>
+    <p></p><li>Du kannst deine Dividenden auch direkt an den Vertrag schicken um neue Münzen zu kaufen. Dazu musst du auf Dividenden investieren klicken und die Transaktion auf MetaMask bestätigen.</li><p></p>
+    <p></p><li>Um dich auszuzahlen klicke auf Auszahlen und folge den Anleitungen.</li><p></p>
+    <p></p><li><b>SPEICHER DIR DAS HIER IRGENDWO WO ES SICHER IST:</b>&nbsp;Zu jeder zeit kannst du dich mit dem Schleudersitz aus dem Vertrag Katapultieren falls die Seite nicht funktionieren sollte. Dazu musst bei METAMASK eine Transaktion eröffnen, 0 Ethereum an den Vertrag (0x2Fa0ac498D01632f959D3C18E38f4390B005e200) schicken mit einem GAS Limit von 150000, und bei “transaction data” 0xb1e35242 eingeben und danach die Transaktion bestätigen. Mit der “getMeOutOfHere” Funktion werden alle deine Münzen und Dividenden in Ethereum an deine metamask Geldbörse zurückgeschickt.</li><p></p>
 </div>
 							<div class="container">
                                 <div class="sections">
