--- a/de/index.html
+++ b/de/index.html
@@ -19,8 +19,8 @@
     <link rel="stylesheet" href="../css/main.css?1512455877">
     <link rel="stylesheet" href="../css/main_ie.css?1512456911">
     <script src="../js/jquery.bxslider.min.js"></script>
-    <link rel="icon" 
-    type="image/png" 
+    <link rel="icon"
+    type="image/png"
     href="../favicon.ico">
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113460032-1"></script>
@@ -196,7 +196,7 @@
                             </p>
                         </div>
                     </div>
-                    
+
                 </div>
             </div>
         </div>
@@ -221,6 +221,7 @@
                                      <div class="sections">
                                         <h4 id="3">Q: Moment, gabs das nicht schonmal?</h4>
                                          <p>A: Ja, es gab verschieden Varianten des Pyramidensystem, EthPyramid ist der nächste schritt Vorwärts. 10% der Investitionen gehen an alle Münzenhalter als Dividenden die wieder investiert oder ausgezahlt werden können.</p>
+                                     </div>
                                      <div class="sections">
                                          <h4 id="4">Q: Ist Ethpyramid sicher?</h4>
                                          <p>Ja, unser Entwicklungsteam hat zahllose Stunden damit verbracht den Smart-Contract zu testen um sicherzustellen das er absolut solide und sicher läuft. Interne fFunktionen des Vertrages sind für niemanden verfügbar.<p>
@@ -241,7 +242,7 @@
 
 
     <!--block.one team section-->
-  
+
 </div>
 <script type="text/javascript" src="../js/jquery.ellipsis.js"></script>
 <script src="../js/jquery.validate.min.js" type="text/javascript"></script>
