--- a/de/index.html
+++ b/de/index.html
@@ -224,11 +224,11 @@
                                      </div>
                                      <div class="sections">
                                          <h4 id="4">Q: Ist Ethpyramid sicher?</h4>
-                                         <p>Ja, unser Entwicklungsteam hat zahllose Stunden damit verbracht den Smart-Contract zu testen um sicherzustellen das er absolut solide und sicher läuft. Interne fFunktionen des Vertrages sind für niemanden verfügbar.<p>
+                                         <p>Ja, unser Entwicklungsteam hat zahllose Stunden damit verbracht den Smart-Contract zu testen um sicherzustellen das er absolut solide und sicher läuft. Internet Funktionen des Vertrages sind für niemanden verfügbar.<p>
                                       </div>
                                      <div class="sections">
                                         <h4 id="5">Q: Alles klar, wie kann ich teilnehmen?</h4>
-                                        <p>A: Du brauchst eine Internetbrowser-Erweiterung die sich&nbsp;<a href="https://metamask.io/">Metamask</a>&nbsp;nennt und anschließend musst du ein wenig Ethereum kaufen.</p>
+                                        <p>A: Du brauchst eine Internetbrowser-Erweiterung die sich <a href="https://metamask.io/">MetaMask</a> nennt und anschließend musst du ein wenig Ethereum kaufen.</p>
                                      </div>
                                      <div class="sections">
                                         <h4 id="6">Q: Kann man die Münze so wie Bitcoin irgendwo abbauen?</h4>
