Add currency and chat toggle to FR

--- a/fr/coins.html
+++ b/fr/coins.html
@@ -86,8 +86,8 @@
                         <script type="text/javascript" src="../js/poh.js"></script>
 
                         <div id="token-sale" class="token-bg nochat">
-                                <div style="margin: 0 auto; width: 1200px">
-                                    <div class="container" style="float: left; margin-right: 20px; width: 940px;">
+                                    <div class="outer-container">
+                                        <div class="container">
                                         <div class="token-content" id="buy-panel">
                                              <div id="token-phase-1" class="token-phase-1">
                                                 <div class="title-bar clearfix visible-xs">
