Translate currency converter

--- a/fr/coins.html
+++ b/fr/coins.html
@@ -102,7 +102,7 @@
                                                             <button id="buy-eos-tokens" class='cta' >Acheter</button>
                                                         </div>
                                                         <div class="currency-selector">
-                                                            Select your currency:
+                                                            Choisissez votre devise:
                                                             <select id="currency">
                                                                 <option>USD</option>
                                                                 <option>AUD</option>
