--- a/au/coins.html
+++ b/au/coins.html
@@ -37,7 +37,7 @@
   <!-- End Google Tag Manager (noscript) -->
 <div class="main-outer text-center faq-main">
     <div class="introduction-banner">
-        <div class="header sticky-header Stray">
+        <div class="header sticky-header Straya">
 		<div class="flagBits">
         <a href="au/coins.html"><img src="../images/AU.jpg"></a>
         <a href="coins.html"><img src="../images/UK.jpg"></a>
