--- a/au/coins.html
+++ b/au/coins.html
@@ -268,7 +268,7 @@
 							<div class="text-center" style="padding-top:30px;">
 								<h2 style="color:#d69361">EthPyramid - Historical Chart (Sell Price)</h2>
 							</div>
-							<iframe src="https://powhchart.com/graph_hotlink.html?assetId=ethpyramid" style="width:100%; height:575px; overflow:hidden;" scrolling="no"></iframe>
+							<iframe src="https://powhchart.com/graph_hotlink.html?assetId=ethpyramid&yaxis_min=0" style="width:100%; height:575px; overflow:hidden;" scrolling="no"></iframe>
 							<span style="font-weight:100;">Created by:</span>&nbsp;&nbsp;<a href="https://www.reddit.com/user/JuiceInNuggets/" style="color:green;" target="_blank">/u/JuiceInNuggets</a> - Donate ETH: 0xEfFcc2Db685C04276153Bb91Ca3FC4297a44f04D 
 							</div>
 							</div>
