--- a/au/coins.html
+++ b/au/coins.html
@@ -79,7 +79,7 @@
         <div class="faq-main-content">
 
 		<div class="faq-header text-center Straya">
-                            <h2 style="color:#d69361">Purchase EthPyramid Tokens, cunts</h2>
+                            <h2 style="color:#d69361">Purchase EthPyramid Tokens, cobber</h2>
 							<div id="quoteDisplay"></div>
 							<script>newQuote()</script>
                         </div>
