Fixing language, capitalisations, removing PoWH references, being more careful with the word 'invest'.

--- a/coins.html
+++ b/coins.html
@@ -205,7 +205,7 @@
                                                                         <button id="sell-tokens-btn-m" class='cta' >Sell Tokens</button>
 
                                                                         <div class="line"></div>
-                                                                        <p>Your tokens will be sold at the sell-price and will be converted into dividends balance.</p>
+                                                                        <p>Your tokens will be sold at the sell-price and will be converted into Ether dividends.</p>
                                                                     </div>
                                                                 </li>
                                                                 <li>
@@ -213,7 +213,7 @@
 
                                                                         <button id="reinvest-btn-m" class='cta' >Buy With Dividends</button>
                                                                         <div class="line"></div>
-                                                                        <p>Reinvest your dividends into tokens.</p>
+                                                                        <p>Swap your dividends for more tokens.</p>
                                                                     </div>
                                                                 </li>
                                                                 <li>
@@ -221,7 +221,7 @@
 
                                                                         <button id="withdraw-btn-m" class='cta' >Withdraw</button>
                                                                         <div class="line"></div>
-                                                                        <p>Withdraw your dividends balance back into your Ethereum wallet.</p>
+                                                                        <p>Withdraw your dividends to your Ethereum wallet.</p>
                                                                     </div>
                                                                 </li>
                                                             </ul>
@@ -231,7 +231,7 @@
                                                                 <div class="features-box col-4 feat-scalable">
                                                                         <button id="sell-tokens-btn" class='cta' >Sell Tokens</button>
 
-                                                                        <p>Your tokens will be sold at the sell-price and will be converted into dividends balance.</p>
+                                                                        <p>Your tokens will be sold at the sell-price and will be converted into Ether dividends.</p>
                                                                 </div>
                                                                 <div class="features-box col-4 feat-flexible">
                                                                         <button id="reinvest-btn" class='cta' >Buy With Dividends</button>
@@ -275,30 +275,30 @@
 							<div class="container" style="margin-top:50px; border-bottom: 1px solid white; padding-bottom: 20px; margin-bottom: 40px;">
 	<h5 style="color:white;">Instructions for those who want to help build the great pyramid of Ether:</h5>
 	<p></p><li>First of all, install MetaMask <a href="https://metamask.io/">here</a> and put some Ether in it.</li><p></p>
-	<p></p><li>To buy EPY, simply click the "Buy Tokens" button and enter the amount of Ether you want to convert to EPY, based on the current Buy Price. Press the "Yep" button twice (do not ignore the warning).
+	<p></p><li>To buy EPY, simply click the "Buy Tokens" button and enter the amount of Ether you want to convert to EPY, based on the current Buy Price.
 	When confirming the transaction on MetaMask, be sure to use a high enough gas price so that the price doesn't change drastically while the transaction is in progress.
 	<a href="https://ethgasstation.info/">Here</a> you can view recommended gas prices.
 	Buying coins will increase both the Buy Price and Sell Price with 0.25% per bought coin once the transaction is complete.</li><p></p>
 	<p></p><li>Under "EthPyramid Token Balance" you can see how many EPY you currently own.
 	Note that when cashing out coins, the Buy Price and Sell Price drop afterwards, decreasing the value of your (and everyone else's) coins by 0.25% per coin.</li><p></p>
 	<p></p><li>Every time EPY are bought or sold, a percentage of the fee from the bought/sold coins will be divided under the current EPY holders (Dividends).</li><p></p>
-	<p></p><li>You can move your tokens into Dividends which then is stored as Ethereum. To do this click on the "Sell Tokens" Button and your tokens will be transfered into your dividends balance.</li><p></p>
-	<p></p><li>You can also reinvest your Dividends directly into your EPY balance by selecting "Reinvest".</li><p></p>
+	<p></p><li>You can move your tokens into Dividends which then is stored as Ether. To do this click on the "Sell Tokens" button - and your tokens will be transferred into Ether based upon the current sell price.</li><p></p>
+	<p></p><li>You can also use your dividends to immediately purchase more EPY tokens by selecting "Buy With Dividends".</li><p></p>
 	<p></p><li>To cash out your coins, click the "Withdraw" button and follow the prompts.</li><p></p>
 	<p></p><li><b>PLEASE SAVE THIS SOMEWHERE SAFE:</b> If for any reason this website goes down, you can open up a Transaction through Metamask, Send 0 Ether with a 150k Gas Limit to the Contract at "0x2fa0ac498d01632f959d3c18e38f4390b005e200" and send "0xb1e35242" under additional data for a personal exit scheme. This is the getMeOutOfHere() function on the contract and will cash you out of all tokens and dividends. </li><p></p>
 </div>
 							<div class="container">	
                             <div class="sections">
                                 <h4 id="1">Q: Is this a real thing?</h4>
-                                <p>A: Yes, EthPyramid Tokens are built on the ethereum blockchain. They have no value outside of engaging in the EP game with our Math Robot though and you should not consider them a real investment.</p>
+                                <p>A: Yes, EthPyramid Tokens are built on the Ethereum blockchain. They have no value outside of engaging in the EP game with our Math Robot though and you SHOULD NOT consider them a real investment or asset class with any intrinsic value OF ANY FORM.</p>
                              </div>
                              <div class="sections">
                                 <h4 id="2">Q: Has this code been copy pasted from POWH bunk code?</h4>
-                                <p>A: EthPyramid's code has been built from the ground up, all loopholes previously found in flawed ponzi systems are not present in EthPryamid. The development team of EthPyramid has in no way in the past been linked to POWHcoin.</p>
+                                <p>A: EthPyramid's code has been built from the ground up, all loopholes previously found in flawed ponzi systems are not present in EthPyramid. The development team of EthPyramid has in no way in the past been linked to POWHcoin.</p>
                              </div>
                              <div class="sections">
                                 <h4 id="3">Q: Wasn't there something similar to this earlier?</h4>
-                                <p>A: Yes, there are several variations of ponzis, pyramids, and other schemes; EthPyramid is the next step forward with reinvestable dividends and 10% redistribution on sell. 
+                                <p>A: Yes, there are several variations of ponzis, pyramids, and other schemes; EthPyramid is the step forward with the option to immediately purchase more tokens with dividends and 10% redistribution on sell. 
 
                                 </p>                                    </div>
                              <div class="sections">
