--- a/index.html
+++ b/index.html
@@ -186,20 +186,16 @@
                                 <div class="container">
                                     <div class="sections">
                                 <h4 id="1">Q: Is this a real thing?</h4>
-                                <p>A: Yes, EthPyramid Tokens are built on the ethereum blockchain. They have no value outside of engaging in the EP game with our Math Robot though and you should not consider them a real investment.</p>
-                             </div>
-                             <div class="sections">
-                                <h4 id="2">Q: Has this code been copy pasted from POWH bunk code?</h4>
-                                <p>A: EthPyramid's code has been built from the ground up, all loopholes previously found in flawed ponzi systems are not present in Ethpyramid. The development team of EthPyramid has in no way in the past been linked to POWHcoin.</p>
+                                <p>A: Yes, EthPyramid Tokens are built on the Ethereum blockchain. They have no value outside of engaging in the EP game with our Math Robot though and you should not consider them a real investment.</p>
                              </div>
                              <div class="sections">
                                 <h4 id="3">Q: Wasn't there something similar to this earlier?</h4>
-                                <p>A: Yes, there are several variations of ponzis, pyramids, and other schemes; EthPyramid is the next step forward with reinvestable dividends and 10% redistribution on sell. 
+                                <p>A: Yes, there are several variations of ponzis, pyramids, and other schemes; EthPyramid is the next step forward with convertible dividends and 10% redistribution on sell. 
 
                                 </p>                                    </div>
                              <div class="sections">
                                  <h4 id="4">Q: Is EthPyramid secure?</h4>
-                                 <p>Yes. Our dev team put a lot of hours into code work and testing to make sure your tokens are safe. Internal functions of the contract are not accessible to the end user.<p>
+                                 <p>Yes. Our dev team put a lot of time into refining and testing this contract to make sure your tokens are safe. Internal functions of the contract are not accessible to the end user.<p>
                               </div>
                              <div class="sections">
                                 <h4 id="5">Q: What do I need to buy into this Pyramid?</h4>
@@ -207,7 +203,7 @@
                              </div>
                              <div class="sections">
                                 <h4 id="6">Q: Is this coin pre-mined?</h4>
-                                <p>A: No, Nor are there any loops in the code that allow us to take ETH out of the contract in any ways that you yourself are not capable of.</p>
+                                <p>A: No. Nor are there any loops in the code that allow us to take ETH out of the contract in any ways that you yourself are not capable of.</p>
                              </div>
                                 </div>
                             </div>
