More rewording... expect a bunch more of these. They'll also need to be fixed in the alt-languages.

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                                     </div>
                                     <h4> Pyramid Technology</h4>
                                     <div class="line"></div>
-                                    <p>When someone purchases or sells an EthPyramid Token (EPY), 10% of the buy/sell-in-price is split by the total number of coins and given as locked-in dividends to each previous investor based on how many coins they own. This is stored as price-locked EPY Tokens that nobody can touch but you!
+                                    <p>When someone purchases or sells an EthPyramid Token (EPY), 10% of the buy/sell price is split by the total number of coins and given as locked-in dividends (priced in Ether) to each previous buyer based on how many EPY tokens they own.
                                     </p>
                                 </div>
                             </li>
@@ -124,7 +124,7 @@
                                     </div>
                                     <h4> Dividends </h4>
                                     <div class="line"></div>
-                                    <p>10% ETH of every buy and sell will be rewarded to token holders. <b>STRONG HANDS</b> will be rewarded through every crash and pump. Our smart contract, unlike other schemes, will allow you to directly reinvest your dividends back into coins.</p>
+                                    <p>10% ETH of every buy and sell will be rewarded to token holders. <b>STRONG HANDS</b> will be rewarded through every crash and pump. Our smart contract, unlike other schemes, also allows you to directly use your dividends to purchase more tokens.</p>
                                     
                                 </div>
                             </li>
@@ -135,7 +135,7 @@
                                             </div>
                                             <h4> Forever </h4>
                                             <div class="line"></div>
-                                            <p>Seriously, no premine, no self destruct, no exit scam. This contract will fluctuate in price and pay out dividends until the ethereum network dies. At any time, you can sell your tokens back to the Smart Contract for 90% of the current price, or withdraw/reinvest the dividends you've accumulated!
+                                            <p>Seriously, no premine, no self destruct, no exit scam. This contract will fluctuate in price and pay out dividends until the Ethereum network dies. At any time, you can sell your tokens back to the smart contract for 80% of the current price, or withdraw/reinvest the dividends you've accumulated!
                                             </p>
                                 </div>
                             </li>
