--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                             </div>
                             <h4> Dividends </h4>
                             <div class="line"></div>
-                            <p>10% ETH of every <strong>buy and sell</strong> will be rewarded to token holders. Strong hands will be rewarded through every crash and pump. The smart contract, unlike other schemes, will allow you to directly reinvest your dividends back into coins, increasing your ability to earn more dividends.</p> 
+                            <p>10% of every <strong>buy and sell</strong> will be rewarded to token holders. Strong hands will be rewarded through every crash and pump. The smart contract, unlike other schemes, will allow you to directly reinvest your dividends back into coins, increasing your ability to earn more dividends.</p> 
                             
                         </div>
                         <div class="features-box mp col-4 feat-usable">
