--- a/au/index.html
+++ b/au/index.html
@@ -147,7 +147,7 @@
                             <div class="icon-main">
                                 <i class="fas fa-chart-line Straya"></i>
                             </div>
-                            <h4> Pyramid Technology, cunts</h4>
+                            <h4> Pyramid Technology </h4>
                                     <div class="line"></div>
                                     <p>When someone purchases or sells an EthPyramid Token (EPY), 10% of the buy/sell-in-price is split by the total number of coins and given as locked-in dividends to each previous investor based on how many coins they own. This is stored as price-locked EPY Tokens that nobody can touch but you!
                                     </p>
@@ -156,7 +156,7 @@
                             <div class="icon-main">
                                 <i class="fas fa-exchange-alt Straya"></i>
                             </div>
-                            <h4> Dividends, cunts </h4>
+                            <h4> Dividends </h4>
                             <div class="line"></div>
                             <p>10% ETH of every <strong>buy and sell</strong> will be rewarded to token holders. Strong hands will be rewarded through every crash and pump. Our smart contract, unlike other schemes, will allow you to directly reinvest your dividends back into coins, increasing your ability to earn more dividends.</p>
                             
@@ -165,7 +165,7 @@
                             <div class="icon-main">
                                 <i class="fas fa-sync-alt Straya"></i>
                             </div>
-                            <h4> Forever, cunts </h4>
+                            <h4> Forever </h4>
                             <div class="line"></div>
                             <p>Seriously, no premine, no self destruct, no exit scam. This contract will fluctuate in price and pay out dividends until the ethereum network dies. At any time, you can sell your tokens back to the Smart Contract for 90% of the current price, or withdraw/reinvest the dividends you've accumulated!
                             </p>
